Fixing text wrap on collection-page buttons

--- a/app/components/collection-page/collection-page.component.scss
+++ b/app/components/collection-page/collection-page.component.scss
@@ -35,6 +35,11 @@
       .buttons-line {
         display: flex;
 
+        button {
+          min-width: 135px;
+          white-space: nowrap;
+        }
+
         button:not(:first-of-type) {
           margin-left: 14px;
         }
